<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/list_item_left_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/not_get"
        android:textColor="@color/COLOR_RED"
        android:textSize="20sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.4dp"
        android:layout_marginTop="5dp"
        android:background="@color/COLOR_UNDERLINE" />

    <LinearLayout
        android:background="@drawable/list_item_bg_selector"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/list_item_iamgeview"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:src="@drawable/recored_item_image" />

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/list_item_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:singleLine="true"
                android:text="@string/list_item_title"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/list_item_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/list_item_desc"
                android:textColor="@color/COLOR_GREY"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/list_item_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/list_item_date"
                android:textColor="@color/COLOR_GREY"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical" >

            <com.ugohb.android.ui.MyTextView
                android:id="@+id/money_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_number"
                android:textColor="@color/COLOR_GREY" >
            </com.ugohb.android.ui.MyTextView>

            <TextView
                android:id="@+id/jifen_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/jifen_number"
                android:textColor="@color/COLOR_RED" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.4dp"
        android:background="@color/COLOR_UNDERLINE" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp" >

        <LinearLayout
            android:id="@+id/list_ll_linelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_see_code"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="120dp"
                android:background="@drawable/btn_cancel_select"
                android:focusable="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/see_code"
                android:textColor="@drawable/btn_textcolor_select" />

            <Button
                android:id="@+id/btn_tuiding"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginLeft="25dp"
                android:background="@drawable/btn_cancel_select"
                android:focusable="false"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/tuiding"
                android:textColor="@drawable/btn_textcolor_select" />
        </LinearLayout>

        <TextView
            android:id="@+id/get_succeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:text="@string/get_succeed"
            android:textColor="@color/COLOR_GREY"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>