<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="44dp"
		    android:orientation="horizontal">
			<ImageView 
			    android:id="@+id/iv_back"
			    android:layout_width="32dp"
			    android:layout_height="32dp"
			    android:layout_gravity="center_vertical"
			    android:src="@drawable/user_back"/>
			<TextView
			    android:layout_width="0dp"
			    android:layout_weight="1"
			    android:text="@string/user_login"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:gravity="center"
			    android:layout_marginRight="32dp"
			    android:textSize="18sp"
		        android:textColor="@color/tv_White"/>		
		</LinearLayout>
		<View 
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:background="@color/bg_Gray"/>
		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
		    android:layout_weight="1">
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="10dp"
		        android:orientation="vertical"
		        android:layout_centerInParent="true">
		     	<EditText
			        android:id="@+id/user_tel"
			        android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:hint="@string/user_tel"		      
		    		android:singleLine="true"
		    		android:drawableLeft="@drawable/user_icon"  
		    		android:padding="10dp"
				    android:textColor="@color/tv_White"
				    android:textColorHint="@color/tv_White"
				    android:background="@drawable/eidt_bg"
				    android:textSize="18sp"
				    android:phoneNumber="true"/>
		     	<EditText
			        android:id="@+id/user_pwd"
			        android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:hint="@string/user_password"		      
		    		android:singleLine="true"
		    		android:inputType="textPassword"
		    		android:drawableLeft="@drawable/user_pwd"  
		    		android:padding="10dp"
				    android:textColor="@color/tv_White"
				    android:textColorHint="@color/tv_White"
				    android:background="@drawable/eidt_bg"
				    android:textSize="18sp"/>
		     	<LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:padding="5dp">
		     		<CheckBox
		     		    android:id="@+id/cb_memory"
		     		    android:layout_width="wrap_content"
		     		    android:layout_height="wrap_content"
		     		    android:text="@string/user_memory"
		     		    android:textColor="@color/tv_White"
		     		    style="@style/UgohbCheckboxStyle" />
		     	    <TextView
		     	        android:id="@+id/tv_user_forget" 
		     	        android:layout_width="fill_parent"
		     	        android:layout_height="wrap_content"
		     	        android:textColor="@color/tv_White"
		     	        android:gravity="right"
		     	        android:textSize="16sp"
		     	        android:text="@string/user_forget"/>
		     	</LinearLayout>
		     	<Button
		     	    android:id="@+id/btn_login_submit" 
		     	    android:layout_width="match_parent"
		     	    android:layout_height="wrap_content"
		     	    android:text="@string/user_go_login"
		     	    android:textColor="@color/tv_Pank"
		     	    android:textSize="18sp"
		     	    android:background="@drawable/btn_login"/>
		     	<Button
		     	    android:id="@+id/btn_go_register" 
		     	    android:layout_width="match_parent"
		     	    android:layout_height="wrap_content"
		     	    android:text="@string/user_go_regist"
		     	    android:textColor="@color/tv_White"
		     	    android:textSize="18sp"
		     	    android:background="@drawable/btn_regist"/>
		     	
		     </LinearLayout>
		</RelativeLayout>
	
   </LinearLayout>
</RelativeLayout>