<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp"
    android:background="@color/bg_White">
	<ImageView 
	    android:id="@+id/iv_integral_thumb"
	    android:layout_width="125dp"
	    android:layout_height="125dp"
	    android:src="@drawable/ugohb_loading"
	    android:scaleType="centerCrop"/>
	<LinearLayout 
	    android:layout_height="match_parent"
	    android:layout_width="0dp"
	    android:layout_weight="1"
	    android:orientation="vertical"
	    android:background="@color/bg_White">
	    <TextView 
	        android:id="@+id/tv_integral_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="true"
	        android:padding="5dp"
	        android:textColor="@color/tv_Black"
	        android:text="@string/integral_item_title"/>
	    <TextView 
	        android:id="@+id/tv_integral_brief"
	        android:layout_width="match_parent"
	        android:layout_height="0dp" 
	        android:padding="5dp"
	        android:layout_weight="1"
	        android:textSize="12sp"
	        android:textColor="@color/tv_Gray_9"
	        android:text="@string/integral_item_brief"/>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <LinearLayout 
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:orientation="vertical">
		        <TextView
		            android:id="@+id/tv_integral_price"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" 
			        android:padding="5dp"			        
			        android:textColor="@color/tv_Gray_9"
			        android:textSize="12sp"
			        android:text="@string/integral_item_price"/>
		        <TextView 
		            android:id="@+id/tv_integral_cost"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" 
			        android:paddingLeft="5dp"
			        android:textColor="@color/tv_Pank"
			        android:text="@string/integral_item_cost"/>
		    </LinearLayout>
		    <TextView 
		        android:id="@+id/tv_integral_get"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" 
		        android:padding="5dp"
		        android:layout_gravity="center_vertical"
		        android:textColor="@color/tv_Black"
		        android:text="@string/integral_item_get"
		        android:background="@drawable/integral_goods_get"/>
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>