<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
     >

    <LinearLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical" >

        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/see_code_dialog_title"
            android:textColor="@color/COLOR_GREY_LIGHT" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:text="@string/see_code_dialog_desc"
            android:textColor="@color/COLOR_RED" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.4dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@color/COLOR_UNDERLINE" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_code_dialog_exchange"
                android:textColor="@color/COLOR_GREY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/see_code_dialog_exchange_number" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_see_code_dialog_close"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_cancel_select"
            android:text="@string/see_code_dialog_close"
            android:textColor="@drawable/btn_textcolor_select" />
    </LinearLayout>
  <ImageButton
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:id="@+id/btn_see_code_dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@null"
        android:src="@drawable/btn_dialog_cancel" />
    
</RelativeLayout>