<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regist_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="44dp"
		    android:orientation="horizontal">
			<ImageView 
			    android:id="@+id/iv_back"
			    android:layout_width="32dp"
			    android:layout_height="32dp"
			    android:layout_gravity="center_vertical"
			    android:src="@drawable/user_back"/>
			<TextView
			    android:layout_width="0dp"
			    android:layout_weight="1"
			    android:text="@string/user_regist"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:gravity="center"
			    android:layout_marginRight="32dp"
			    android:textSize="18sp"
		        android:textColor="@color/tv_White"/>		
		</LinearLayout>
		<View 
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:background="@color/bg_Gray"/>
		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
		    android:layout_weight="1">
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="10dp"
		        android:orientation="vertical"
		        android:layout_centerInParent="true">
		     	<EditText
			        android:id="@+id/regist_user_tel"
			        android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:hint="@string/user_regist_tel"		      
		    		android:singleLine="true"
		    		android:drawableLeft="@drawable/user_icon"  
		    		android:padding="10dp"
				    android:textColor="@color/tv_White"
				    android:textColorHint="@color/tv_White"
				    android:background="@drawable/eidt_bg"
				    android:textSize="18sp"
				    android:phoneNumber="true"/>
		     	 <FrameLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content">
		     	    <EditText
				        android:id="@+id/regist_user_idcode"
				        android:layout_width="match_parent"
					    android:layout_height="wrap_content"
					    android:hint="@string/user_regist_idcode"		      
			    		android:singleLine="true"
			    		android:drawableLeft="@drawable/user_icon"  
			    		android:padding="10dp"
					    android:textColor="@color/tv_White"
					    android:textColorHint="@color/tv_White"
						android:background="@drawable/eidt_bg"
					    android:textSize="18sp"
					    />
		     	    <TextView 
		     	        android:id="@+id/tv_idcode_get"
		     	        android:layout_width="wrap_content"
		     	        android:layout_height="wrap_content"
		     	        android:textColor="@color/tv_White"
		     	        android:text="@string/user_regist_idcode_tv"
		     	        android:textSize="14sp"
		     	        android:padding="5dp"
		     	        android:layout_marginRight="10dp"
		     	        android:background="@drawable/idcode_bg"
		     	        android:layout_gravity="right|center_vertical"/>
		     	</FrameLayout>
		     	
		     	<EditText
			        android:id="@+id/regist_user_pwd"
			        android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:hint="@string/user_regist_pwd"		      
		    		android:singleLine="true"
		    		android:inputType="textPassword"
		    		android:drawableLeft="@drawable/user_pwd"  
		    		android:padding="10dp"
				    android:textColor="@color/tv_White"
				    android:textColorHint="@color/tv_White"
				    android:background="@drawable/eidt_bg"
				    android:textSize="18sp"/>
		     	<EditText
			        android:id="@+id/regist_user_pwd_true"
			        android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:hint="@string/user_regist_pwd_true"		      
		    		android:singleLine="true"
		    		android:inputType="textPassword"
		    		android:drawableLeft="@drawable/user_pwd"  
		    		android:padding="10dp"
				    android:textColor="@color/tv_White"
				    android:textColorHint="@color/tv_White"
				    android:background="@drawable/eidt_bg"
				    android:textSize="18sp"/>
		     	<Button
		     	    android:id="@+id/btn_regist_submit" 
		     	    android:layout_width="match_parent"
		     	    android:layout_height="wrap_content"
		     	    android:text="@string/user_start_regist"
		     	    android:textColor="@color/tv_Pank"
		     	    android:textSize="18sp"
		     	    android:background="@drawable/btn_login"/>
		     	
		     </LinearLayout>
		</RelativeLayout>
	
   </LinearLayout>
</RelativeLayout>